--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,39 @@
-.main-div{
+.main-div {
   display: flex;
   align-items: center;
   justify-content: center;
-};
+}
 
-.water-background{
-  background-color: rgb(30, 144, 144);
-};
+.water-background {
+  background-color: rgb(134, 152, 152);
+}
 
-.game-heading{
+.game-heading {
   padding: 5px 20px;
   border-radius: 5px;
-};
+  text-align: center;
+  font-size: 40px;
+}
 
+.square-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 10px;
+}
+
+.move-detection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left,
+.right {
+  height: 10px;
+  width: 80px;
+  border-radius: 40%;
+ background-color: rgb(113, 121, 128);
+ text-align: center;
+ padding: 20px;
+}
