--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .main-div {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .water-background {
@@ -28,12 +29,29 @@
   align-items: center;
 }
 
+
+.finished-state {
+  font-size: 30px;
+  text-align: center;
+  color: rgb(42, 223, 42);
+}
+
+
+.play-online {
+  background-color: rgb(16, 161, 218);
+  color: rgb(8, 8, 8);
+  font-size: 50px;
+  border-radius: 10px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .left,
 .right {
   height: 10px;
   width: 80px;
   border-radius: 40%;
- background-color: rgb(113, 121, 128);
- text-align: center;
- padding: 20px;
+  background-color: rgb(113, 121, 128);
+  text-align: center;
+  padding: 20px;
 }
