--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,8 @@
 
 
 .play-online {
+  width: 200px;
+  height: 200px;
   background-color: rgb(16, 161, 218);
   color: rgb(8, 8, 8);
   font-size: 50px;
@@ -55,3 +57,26 @@
   text-align: center;
   padding: 20px;
 }
+
+
+.waiting {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+
+.current-move-circle{
+  background-color: goldenrod;
+}
+
+.current-move-cross{
+  background-color: blueviolet;
+}
+
