--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,23 @@
 }
 
 
+.loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid rgb(255, 0, 55);
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 .current-move-circle{
   background-color: goldenrod;
 }
